--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-Br">
+<html lang="pt-br">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -52,11 +52,13 @@
 							</button>
 						</li>
 						<li class="nav-item">
-							<button
-							class=" btn btn-lista"
-							onclick="lista()">
-							Lista Ocorrencia
-						</button>
+							<a href="listaOcorrencia.html">
+								<button
+									class=" btn btn-lista"
+									onclick="lista()">
+									Lista Ocorrencia
+								</button>
+							</a>
 						</li>
 					</ul>
 					<form class="d-flex" role="search">
@@ -73,33 +75,35 @@
 				</div>
 			</div>
 		</nav>
-		<div id="map">
-			
+
+		<div id="map"></div>
+		
+		<div class="w-100 d-flex justify-content-center py-4">
+			<div class="form-width">
+				<div>
+					<label for="titulo" class="form-label">Título da ocorrência</label>
+					<input type="text" id="titulo" class="form-control" />
+				</div>
+				<div>
+					<label for="tipo" class="form-label">Tipo da ocorrência</label>
+					<select id="tipo" class="form-select">
+						<option value="assalto">assalto</option>
+						<option value="furto">furto</option>
+						<option value="homicidio">homicidio</option>
+						<option value="latrocinio">latrocinio</option>
+					</select>
+				</div>
+				<div>
+					<label for="data" class="form-label">Data da ocorrência</label>
+					<input type="date" id="data"  class="form-control" />
+				</div>
+				<div>
+					<label for="hora"  class="form-label">Hora da ocorrência</label>
+					<input type="time" id="hora"class="form-control" />
+				</div>
+			</div>
 		</div>
-		<div>
-			<div>
-				<label for="titulo" class="form-label">Título da ocorrência</label>
-				<input type="text" id="titulo" class="form-control" />
-			</div>
-			<div>
-				<label for="tipo" class="form-label">Tipo da ocorrência</label>
-				<select id="tipo" class="form-select">
-					<option value="assalto">assalto</option>
-					<option value="furto">furto</option>
-					<option value="homicidio">homicidio</option>
-					<option value="latrocinio">latrocinio</option>
-				</select>
-			</div>
-			<div>
-				<label for="data" class="form-label">Data da ocorrência</label>
-				<input type="date" id="data"  class="form-control" />
-			</div>
-			<div>
-				<label for="hora"  class="form-label">Hora da ocorrência</label>
-				<input type="time" id="hora"class="form-control" />
-			</div>
-		</div>
-		<!-- Modal add/edit -->
+
 		<!-- Footer -->
 		<footer class="text-center text-lg-start bg-light text-muted">
 			<!-- Section: Social media -->
@@ -252,6 +256,41 @@
 			<!-- Copyright -->
 		</footer>
 		<!-- Footer -->
+
+		<div class="modal" tabindex="-1" role="dialog" id="modalLerOcorrencia">
+			<div class="modal-dialog" role="document">
+			  <div class="modal-content">
+				<div class="modal-header">
+				  <h5 class="modal-title">Modal title</h5>
+				  <button type="button" class="close" onclick="closeModal('modalLerOcorrencia')">
+					<span aria-hidden="true">&times;</span>
+				  </button>
+				</div>
+				<div class="modal-body">
+					<div class="d-flex gap-4">
+						<p>Titulo:</p>
+						<p id="dados-titulo"></p>
+					</div>
+					<div class="d-flex gap-4">
+						<p>Tipo: </p>
+						<p id="dados-tipo"></p>
+					</div>
+					<div class="d-flex gap-4">
+						<p>Data:</p>
+						<p id="dados-data"></p>
+					</div>
+					<div class="d-flex gap-4">
+						<p>Hora:</p>
+						<p id="dados-hora"></p>
+					</div>
+				</div>
+				<div class="modal-footer">
+				  <button type="button" class="btn btn-secondary" onclick="closeModal('modalLerOcorrencia')">OK</button>
+				</div>
+			  </div>
+			</div>
+		</div>
+
 		<script src="./script.js"></script>
 		<script
 			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
