--- a/front-end/listaOcorrencia.html
+++ b/front-end/listaOcorrencia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,6 +19,7 @@
 		<link rel="stylesheet" type="text/css" href="Style/style.css" />
 		<title>Document</title>
 	</head>
+
 	<body>
 		<nav class="navbar navbar-expand-lg">
 			<div class="container-fluid">
@@ -34,36 +35,38 @@
 				>
 					<span class="navbar-toggler-icon"></span>
 				</button>
-			</div>
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-					<li class="nav-item">
-						<a class="nav-link" aria-current="page" href="#">
-							Policia Civil
-						</a>
-					</li>
-					<li class="nav-item">
-						<button class="btn btn-add" onclick="salvar()">
-							Adicionar
+				<div
+					class="collapse navbar-collapse"
+					id="navbarSupportedContent"
+				>
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a
+								class="nav-link"
+								aria-current="page"
+								href="index.html"
+							>
+								Policia Civil
+							</a>
+						</li>
+						<li class="nav-item">
+							<button class="btn btn-lista" onclick="lista()">
+								Lista Ocorrencia
+							</button>
+						</li>
+					</ul>
+					<form class="d-flex" role="search">
+						<input
+							class="form-control me-2"
+							type="search"
+							placeholder="Search"
+							aria-label="Search"
+						/>
+						<button class="btn btn-outline-success" type="submit">
+							Search
 						</button>
-					</li>
-					<li class="nav-item">
-						<button class="btn btn-lista" onclick="lista()">
-							Lista Ocorrencia
-						</button>
-					</li>
-				</ul>
-				<form class="d-flex" role="search">
-					<input
-						class="form-control me-2"
-						type="search"
-						placeholder="Search"
-						aria-label="Search"
-					/>
-					<button class="btn btn-outline-success" type="submit">
-						Search
-					</button>
-				</form>
+					</form>
+				</div>
 			</div>
 		</nav>
 		<div>
@@ -74,10 +77,162 @@
 					border-radius: 2px;
 					box-shadow: 0 2px 10px 0 rgba(70, 76, 79, 0.2);
 				"
-				width="840"
+				width="100%"
 				height="500"
 				src="https://charts.mongodb.com/charts-project-0-kobqk/embed/charts?id=65427a7c-34a0-4f13-854c-054890997092&maxDataAge=3600&theme=dark&autoRefresh=true"
 			></iframe>
 		</div>
+
+		<footer class="text-center text-lg-start bg-light text-muted">
+			<!-- Section: Social media -->
+			<section
+				class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
+			>
+				<!-- Left -->
+				<div class="me-5 d-none d-lg-block">
+					<span>INSTITUCIONAL</span>
+				</div>
+				<!-- Left -->
+
+				<!-- Right -->
+				<div>
+					<a href="" class="me-4 text-reset">
+						<i class="fab fa-facebook-f"></i>
+						<img src="./imagens/icons8-facebook.svg" width="50px"
+					/></a>
+
+					<a href="" class="me-4 text-reset">
+						<i class="fab fa-instagram"></i>
+						<img
+							src="imagens/icons8-instagram-96.svg"
+							width="50px"
+						/>
+					</a>
+				</div>
+				<!-- Right -->
+			</section>
+			<!-- Section: Social media -->
+
+			<!-- Section: Links  -->
+			<section class="">
+				<div class="container text-center text-md-start mt-5">
+					<!-- Grid row -->
+					<div class="row mt-3">
+						<!-- Grid column -->
+						<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+							<!-- Content -->
+							<h6 class="text-uppercase fw-bold mb-4">
+								<i class="fas fa-gem me-3"></i>Policia Civil
+							</h6>
+							<p>
+								A Polícia Civil do Estado da Paraíba é uma das
+								polícias da Paraíba, Brasil, órgão do sistema de
+								segurança pública ao qual compete, nos termos do
+								artigo 144, § 4º, da Constituição Federal e
+								ressalvada competência específica da União, as
+								funções de polícia judiciária e de apuração das
+								infrações penais.
+							</p>
+						</div>
+						<!-- Grid column -->
+
+						<!-- Grid column -->
+						<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+							<!-- Links -->
+							<h6 class="text-uppercase fw-bold mb-4">
+								SERVIÇOS
+							</h6>
+							<p>
+								<a href="#!" class="text-reset"
+									>Emissão de RG</a
+								>
+							</p>
+							<p>
+								<a href="#!" class="text-reset"
+									>Certidão de Antecedentes Criminais</a
+								>
+							</p>
+							<p>
+								<a href="#!" class="text-reset"
+									>Disque Denúncia - 197</a
+								>
+							</p>
+							<p>
+								<a href="#!" class="text-reset">NOTÍCIAS</a>
+							</p>
+						</div>
+						<!-- Grid column -->
+
+						<!-- Grid column -->
+						<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+							<!-- Links -->
+							<h6 class="text-uppercase fw-bold mb-4">
+								CONCURSOS
+							</h6>
+							<p>
+								<a href="#!" class="text-reset">
+									Concurso 2008
+								</a>
+							</p>
+							<p>
+								<a href="#!" class="text-reset">
+									Concurso interno
+								</a>
+							</p>
+							<p>
+								<a href="#!" class="text-reset">
+									Concurso 2021
+								</a>
+							</p>
+							<p>
+								<a href="#!" class="text-reset">
+									Fale Conosco
+								</a>
+							</p>
+						</div>
+						<!-- Grid column -->
+
+						<!-- Grid column -->
+						<div
+							class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4"
+						>
+							<!-- Links -->
+							<h6 class="text-uppercase fw-bold mb-4">
+								TELEFONES
+							</h6>
+							<p><i class="fas fa-home me-3"></i> Cajazeiras</p>
+							<p>
+								<i class="fas fa-envelope me-3"></i>
+								Campina grande
+							</p>
+							<p><i class="fas fa-phone me-3"></i> João Pessoa</p>
+							<p><i class="fas fa-print me-3"></i> Patos</p>
+							<p><i class="fas fa-print me-3"></i> Sousa</p>
+						</div>
+						<div>
+							<p class="d-flex justify-content-end">
+								<i></i>
+								Governo da Paraiba
+							</p>
+						</div>
+						<div class="d-flex justify-content-end">
+							<img src="imagens/254346.svg" alt="" width="80px" />
+						</div>
+						<!-- Grid column -->
+					</div>
+					<!-- Grid row -->
+				</div>
+			</section>
+			<!-- Section: Links  -->
+
+			<!-- Copyright -->
+			<div
+				class="text-center p-4"
+				style="background-color: rgba(0, 0, 0, 0.05)"
+			>
+				© 2023 Iago Alves & Warlla.
+			</div>
+			<!-- Copyright -->
+		</footer>
 	</body>
 </html>
