--- a/front-end/editar-excluir.html
+++ b/front-end/editar-excluir.html
@@ -14,8 +14,8 @@
     <title>Updates Ocorrencias</title>
 </head>
 
-<body onload="carregaDispositivos()">
-    <nav class="navbar navbar-expand-lg">
+<body>
+    <nav class=" navbar navbar-expand-lg">
         <div class="container-fluid">
             <img id="navbar-img" src="imagens/332860.svg" height="180px" />
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -39,24 +39,23 @@
                     </li>
                     <li class="nav-item">
                         <a href="editar-excluir.html">
-                            <button type="button" class="btn btn-lista" ">
+                            <button type="button" class="btn btn-lista">
                                 Editar/ Excluir Ocorencias
                             </button>
                         </a>
                     </li>
                 </ul>
                 <form class=" d-flex" role="search">
-                                <input class="form-control me-2" type="search" placeholder="Search"
-                                    aria-label="Search" />
-                                <button class="btn btn-outline-success" type="submit">
-                                    Search
-                                </button>
-                                </form>
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                    <button class="btn btn-outline-success" type="submit">
+                        Search
+                    </button>
+                </form>
             </div>
         </div>
     </nav>
-    <div>
-        <button class="btn btn-info" onclick="carregarocorrencias()">Listar </button>
+    <div class="updates">
+        <button class="btn btn-info listar" onclick="carregarOcorrencias()">Listar </button>
         <div class="container"></div>
     </div>
 
